--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -73,15 +73,65 @@
 {% endif %}
 </div>
 
+{% if page.custom_fields.page_region_specific_thank_you_pages %}
+<script>
+	$(function(){
+    function getUserRegion(country) {
+      const euContriesExUK = [
+    'albania', 'andorra', 'armenia','austria', 'azerbaijan', 'belarus', 'belgium', 'bosnia and herzegovina', 'bulgaria', 'croatia', 'cyprus', 'czech republic', 'denmark', 'estonia', 'finland', 'france', 'georgia', 'germany', 'greece', 'hungary', 'iceland', 'ireland', 'italy', 'kosovo', 'latvia', 'liechtenstein', 'lithuania', 'luxembourg', 'macedonia', 'malta', 'moldova', 'monaco', 'montenegro', 'netherlands', 'norway', 'poland', 'portugal', 'romania', 'russia', 'san marino', 'serbia', 'slovakia', 'slovenia', 'spain', 'sweden', 'switzerland', 'turkey', 'ukraine',  'vatican'];
+      if (country === 'united states') {
+        return 'united states';
+      } else if (country === 'canada') {
+        return 'canada';
+      } else if (country === 'united kingdom') {
+        return 'united kingdom';
+      } else if (euContriesExUK.indexOf(country) > -1) {
+        return 'eu excluding uk'
+      } else {
+        return false;
+      }
+    }
+    let regionSpecificUrlRules = "{% spaceless %}{% with page.custom_fields.page_region_specific_thank_you_pages|length as length %}{{ page.custom_fields.page_region_specific_thank_you_pages|truncatechars:length }}{% endwith %}{% endspaceless %}".replace(/<p[^>]*>/g, "").split('</p>');
+    let regionSpecificUrlRulesArray = [];
+    let userCountry;
+    let userRegion;
+    for (var x = 0; x < regionSpecificUrlRules.length; x++) {
+      if (regionSpecificUrlRules[x]) {
+        let regionRule = {
+          'region': regionSpecificUrlRules[x].replace(/\=/,'setTo').split('setTo')[0],
+          'url': regionSpecificUrlRules[x].replace(/\=/,'setTo').split('setTo')[1]
+        }
+        regionSpecificUrlRulesArray.push(regionRule);
+      }
+    }
+    
+    function setTyPageUrl(region){
+      let tyPageUrl;
+      for (var i = 0; i < regionSpecificUrlRulesArray.length; i++) {
+        if (regionSpecificUrlRulesArray[i].region.toLowerCase() ===  userRegion) {
+          $('form#action-form').append($('<input type="hidden" name="redirect" value="'+ regionSpecificUrlRulesArray[i].url +'">'))
+          tyPageUrl = regionSpecificUrlRulesArray[i].url;
+          break;
+        } else {
+          console.log('no rule found, use default share url');
+        }
+      }
+      $('form#action-form input[name="redirect').remove();
+      if (tyPageUrl) {
+        $('form#action-form').append($('<input type="hidden" name="redirect" value="'+ regionSpecificUrlRulesArray[i].url +'">'));
+      }
+    }
 
-
-{% if page.custom_fields.form_opt_in %}
-<input type="hidden" name="opt_in" value="1">
-<div class="input-checkbox ak-userfield-checkbox-choice">
-	<label for="lists-checkbox">
-		<input id="lists-checkbox" class="checkbox" type="checkbox" name="lists" value="{{ page.list.id }}" checked> {% filter ak_text:"general_opt_in_label" %}Stay up to date with 350.org and the climate movement.{% endfilter %}
-	</label>
-</div>
-{% else %}
-<!--<input name="lists" value="{{ page.list.id }}" type="hidden"/>-->
+    userCountry = '{{ user.country }}';
+    userRegion = getUserRegion(userCountry);
+    setTyPageUrl(userRegion);
+    if ($('#country').length) {
+      $('#country').change(function(){
+        userCountry = $(this).val();
+        userRegion = getUserRegion(userCountry.toLowerCase());
+        setTyPageUrl(userRegion);
+      });
+    }
+  });
+</script>
 {% endif %}
